# glgui

./: .gitignore  CMakeLists.txt
include/: engine.hpp  image.hpp  pch.hpp  shader.hpp  texture.hpp  utils.hpp
include/widgets/: base.hpp  button.hpp
res/shaders/: fragment.frag  geometry.geom  image.frag  vertex.vert
src/: engine.cpp  image.cpp  main.cpp  shader.cpp  texture.cpp  utils.cpp
src/widgets/: base.cpp  button.cpp
